# nfl_stats

./: Cargo.toml  README.md  stats.json  stats_table.json
data/: stats.json
request/: Cargo.toml
request/src/: get_stats.rs  html.rs  json.rs  lib.rs  main.rs  put_item.rs  threads.rs  types.rs
request/tests/: integration_tests.rs
server/: index.js
src/: get_stats_and_write_to_html.rs  json.rs  lib.rs  main.rs  practice.rs  tests.rs  utils.rs  write_stats_to_json.rs
