[package]
name = "request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features=["blocking"] }
scraper = { version = "0.15.0" }
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.26.0"

[[test]]
name = "integration_tests"